styles files added

--- a/src/index.css
+++ b/src/index.css
@@ -6,12 +6,6 @@
   font-family: "Montserrat", sans-serif;
 }
 
-/* -------BODY------- */
-.home {
-  min-height: 80vh;
-  background-color: #fff;
-}
-
 /* -------SCROLLBAR------- */
 ::-webkit-scrollbar {
   width: 8px;
@@ -26,1103 +20,9 @@
   border-radius: 50px;
 }
 
-/* -------FOOTER------- */
+/* ----------------Form------------------ */
 @media screen and (min-width: 601px) {
-  footer {
-    min-height: 30vh;
-    background-color: #0066ff;
-  }
-  .smallscreenfooter {
-    display: none;
-  }
-
-  .link1 {
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-  }
-
-  .link1:hover {
-    color: rgb(255, 255, 255);
-  }
-
-  .f1 {
-    color: rgb(238, 245, 255);
-    font-size: 13.5px;
-    font-weight: 600;
-  }
-
-  .f2 {
-    color: rgb(238, 245, 255);
-    font-size: 9.5px;
-    font-weight: 400;
-  }
-
-  .f3 {
-    color: rgb(238, 245, 255);
-    font-size: 12px;
-    font-weight: 400;
-  }
-
-  .f4 {
-    color: rgb(238, 245, 255);
-    font-size: 11px;
-    font-weight: 400;
-  }
-  .row1 {
-    margin-bottom: 30px;
-  }
-  .row2 {
-    margin: 14px 0 14px 0;
-  }
-}
-
-/* -------NAVBAR(HEADER)------- */
-@media screen and (min-width: 601px) {
-  .navbaar {
-    min-height: 20vh;
-    padding: 12px 20px 12px 20px;
-    background-color: #fff;
-    z-index: 2;
-  }
-
-  .nav2con {
-    display: none;
-  }
-
-  .f5 {
-    color: #000;
-    font-size: 8px;
-    font-weight: 400;
-  }
-
-  .logo {
-    font-size: 20px;
-    letter-spacing: -1px;
-    color: #000;
-
-    padding-left: 30px;
-    font-weight: 600;
-  }
-
-  .logo2 {
-    font-size: 11px;
-
-    color: #000;
-    padding-left: 30px;
-    margin-top: -30px;
-    font-weight: 500;
-  }
-
-  .tulogo {
-    padding-left: 30px;
-  }
-  br {
-    line-height: 0.2;
-  }
-
-  .navlnk {
-    color: #000;
-    font-size: 12px;
-    font-weight: 500;
-    padding: 0 6px 0 6px;
-  }
-
-  .navlnk1 {
-    color: #0066ff;
-    font-size: 12px;
-    font-weight: 500;
-    padding: 0 6px 0 6px;
-  }
-
-  .navlnk:hover {
-    color: #000;
-    border-bottom: 3px solid #0066ff;
-    font-weight: 500;
-    transition: 0.1s ease-in-out;
-  }
-
-  .navlnk1:hover {
-    color: #0040a0;
-    border-bottom: 3px solid #0066ff;
-    transition: 0.1s ease-in-out;
-  }
-}
-
-/* -------SECTION 1 (S1)------- */
-@media screen and (min-width: 601px) {
-  .sctn_one {
-    min-height: 60vh;
-  }
-
-  .cdiv1 {
-    text-align: center;
-    margin-top: -60px;
-  }
-
-  .tnp3 {
-    display: none;
-  }
-  .stext1 {
-    color: #141414;
-    font-size: 30px;
-    font-weight: 800;
-    letter-spacing: -1px;
-    margin-top: 10px;
-  }
-  .stext2 {
-    color: #141414;
-    font-size: 16px;
-    font-weight: 600;
-    letter-spacing: -1px;
-    margin-bottom: 100px;
-  }
-}
-
-/* -------SECTION 2(S2)------- */
-@media screen and (min-width: 601px) {
-  .sctn_two {
-    min-height: 60vh;
-  }
-
-  .slider {
-    margin: 0 40px 0 40px;
-  }
-
-  .rec.rec-dot {
-    visibility: hidden;
-  }
-
-  .rec.rec-arrow {
-    color: #0066ff;
-    background-color: #f5f7f8;
-    border-radius: 30%;
-  }
-
-  .slide {
-    text-align: center;
-    color: #141414;
-    font-size: 20px;
-    font-weight: 600;
-    margin: 40px 0 60px 0;
-  }
-
-  .slidetext:hover {
-    border-bottom: 3px solid #0066ff;
-    transition: 0.1s ease-in-out;
-  }
-}
-
-/* -------SECTION 3(S2)------- */
-@media screen and (min-width: 601px) {
-  .act {
-    text-align: center;
-    color: #141414;
-    font-size: 20px;
-    font-weight: 600;
-    margin: 40px 0 80px 0;
-  }
-
-  .acttext:hover {
-    border-bottom: 3px solid #0066ff;
-    transition: 0.1s ease-in-out;
-  }
-}
-/* -------SECTION Odd()------- */
-
-@media screen and (min-width: 601px) {
-  .sctn_odd {
-    min-height: 60vh;
-  }
-
-  .sctn_recruit {
-    min-height: 60vh;
-  }
-
-  .smallscreens1 {
-    display: none;
-  }
-
-  .smallscreens2 {
-    display: none;
-  }
-
-  .a1 {
-    color: #1b1b1b;
-    font-size: 18px;
-    font-weight: 900;
-    margin: 16px 0 16px 0;
-  }
-
-  .a2 {
-    color: #636363;
-    font-size: 14px;
-    font-weight: 500;
-  }
-
-  .tnp1 {
-    margin-top: 80px;
-  }
-  .tnpcontainer {
-    padding: 0 60px 0 60px;
-  }
-
-  .tnp2 {
-    margin-top: 80px;
-    margin-left: 160px;
-  }
-}
-
-/* -------SECTION 3(S2)------- */
-@media screen and (min-width: 601px) {
-  .recruitcon2 {
-    padding-top: 240px;
-  }
-
-  .recruitrow1 {
-    margin: 40px 0 40px 0;
-    padding: 0 50px;
-  }
-
-  .sec {
-    margin: 20px 0 20px 0;
-  }
-
-  .sfourcon2 {
-    display: none;
-  }
-
-  .a3 {
-    color: #1b1b1b;
-    font-size: 18px;
-    font-weight: 900;
-    margin: 16px 0 16px 0;
-  }
-
-  .a4 {
-    color: #636363;
-    font-size: 14px;
-    font-weight: 500;
-  }
-  .tnpcontainer1 {
-    padding: 0 10px;
-  }
-}
-
-/* ---------------NOT FOUND--------------------- */
-.notfound {
-  min-height: 80vh;
-}
-
-.nf1 {
-  text-align: center;
-  padding-top: 100px;
-}
-
-.nftext {
-  font-size: 42px;
-}
-
-/* ------------------EVENTS------------------------ */
-@media screen and (min-width: 601px) {
-  .eventmain {
+  .formcon {
     min-height: 80vh;
-    padding-bottom: 80px;
-  }
-
-  .econcard {
-    padding: 20px 0 20px 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .econcard1 {
-    width: 34rem;
-  }
-
-  .eventbody {
-    border: solid #f5f7f8;
-    background-color: #f5f7f8;
-    border-radius: 20px;
-  }
-  .etext1 {
-    text-align: center;
-    font-size: 18px;
-    font-weight: 500;
-    padding-top: 10px;
-  }
-
-  .etext2 {
-    text-align: justify;
-    text-justify: inter-word;
-    padding: 20px;
-    font-size: 14px;
-  }
-
-  .etext3 {
-    text-align: center;
-    padding-bottom: 10px;
-    font-size: 14px;
-  }
-  .event1 {
-    text-align: center;
-    color: #141414;
-    font-size: 21px;
-    font-weight: 500;
-    margin: 10px 0 10px 0;
-  }
-
-  .event1text:hover {
-    border-bottom: 3px solid #0066ff;
-    transition: 0.1s ease-in-out;
-  }
-}
-
-/* ----------About---------- */
-@media screen and (min-width: 601px) {
-  .aboutcontainer {
-    min-height: 80vh;
-  }
-
-  .abouttext {
-    padding: 20px 200px 20px 200px;
-    line-height: 2;
-    text-align: justify;
-    text-justify: inter-word;
-    color: #000;
-    font-weight: 400;
-    font-size: 15px;
-  }
-}
-/* ----------Job---------- */
-@media screen and (min-width: 601px) {
-  .jobscon {
-    padding: 10px;
-    border-radius: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .jobscon1 {
-    width: 70%;
-  }
-
-  .link {
-    color: #000;
-    text-decoration: none;
-  }
-
-  .link:hover {
-    color: #0066ff;
-  }
-
-  .jlink {
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-  }
-
-  .jlink:hover {
-    color: #ffffff;
-  }
-  .jobbody {
-    border: solid #f5f7f8;
-    background-color: #f5f7f8;
-    border-radius: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .jobtext1 {
-    font-size: 15px;
-    font-weight: 500;
-    padding: 10px 10px 0 20px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    width: 300px;
-  }
-
-  .jobtext2 {
-    font-size: 14px;
-    font-weight: 400;
-    padding: 10px 10px 0 0;
-  }
-
-  .jobbtn {
-    position: relative;
-    right: 0;
-  }
-}
-/* --------PLACEMENT-------- */
-@media screen and (min-width: 601px) {
-  .select {
-    background-color: #f5f7f8;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 60%;
-    padding: 20px;
-    border-radius: 20px;
-  }
-
-  .placecon {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding-bottom: 40px;
-  }
-  .pb {
-    padding-right: 50px;
-    font-size: 16px;
-    font-weight: 500;
-  }
-
-  .tablecon {
-    width: 80%;
-  }
-  .tablecon1 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .tablecon2 {
-    display: none;
-  }
-}
-/* ----------Visitor---------- */
-@media screen and (min-width: 601px) {
-  .viscon {
-    padding: 16px;
-    border-radius: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .viscon1 {
-    width: 60%;
-  }
-
-  .visbody {
-    display: flex;
-    border: solid #f5f7f8;
-    background-color: #f5f7f8;
-    border-radius: 30px;
-  }
-
-  .vistext1 {
-    font-size: 16px;
-    font-weight: 500;
-    padding: 10px 10px 0 20px;
-  }
-
-  .vistext2 {
-    font-size: 14px;
-    font-weight: 400;
-    padding: 10px 10px 0 0;
-  }
-}
-/* ----------Stories--------------- */
-@media screen and (min-width: 601px) {
-  .storiescontainer {
-    min-height: 80vh;
-    padding-bottom: 80px;
-  }
-  .storycon {
-    padding: 20px 0 20px 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .storybody {
-    width: 18rem;
-  }
-
-  .storyimg {
-    width: 100%;
-  }
-
-  .storybody2 {
-    border: solid #f5f7f8;
-    background-color: #f5f7f8;
-    border-radius: 20px;
-  }
-
-  .storytext1 {
-    padding-top: 20px;
-    text-align: center;
-    font-size: 16px;
-    font-weight: 500;
-  }
-  .storytext2 {
-    text-align: center;
-    line-height: 0.6;
-    font-size: 13px;
-    padding-bottom: 20px;
-  }
-}
-/* ----------PEOPLE----------- */
-@media screen and (min-width: 601px) {
-  .peoplecon {
-    padding: 20px 0 20px 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .peoplebody {
-    width: 18rem;
-  }
-
-  .peopleimg {
-    width: 100%;
-  }
-
-  .peoplebody2 {
-    border: solid #f5f7f8;
-    background-color: #f5f7f8;
-    border-radius: 20px;
-  }
-
-  .ptext1 {
-    padding-top: 20px;
-    text-align: center;
-    font-size: 16px;
-    font-weight: 500;
-  }
-  .ptext2 {
-    text-align: center;
-    line-height: 0.6;
-    font-size: 13px;
-  }
-}
-/* ---------------- */
-/* ---------------- */
-/* ---------------- */
-/* SMALLER SCREENS */
-/* ---------------- */
-/* ---------------- */
-/* ---------------- */
-
-/* ------------------EVENTS(small)------------------------ */
-@media screen and (max-width: 600px) {
-  .eventmain {
-    min-height: 80vh;
-    padding-bottom: 80px;
-  }
-
-  .econcard {
-    padding: 20px 0 20px 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .econcard1 {
-    width: 90%;
-  }
-
-  .eventbody {
-    border: solid #f5f7f8;
-    background-color: #f5f7f8;
-    border-radius: 20px;
-  }
-  .etext1 {
-    text-align: center;
-    font-size: 18px;
-    font-weight: 500;
-    padding-top: 10px;
-  }
-
-  .etext2 {
-    text-align: justify;
-    text-justify: inter-word;
-    padding: 20px;
-    font-size: 14px;
-  }
-
-  .etext3 {
-    text-align: center;
-    padding-bottom: 10px;
-    font-size: 14px;
-  }
-  .event1 {
-    text-align: center;
-    color: #141414;
-    font-size: 18px;
-    font-weight: 500;
-    margin: 10px 0 10px 0;
-  }
-
-  .event1text:hover {
-    border-bottom: 3px solid #0066ff;
-    transition: 0.1s ease-in-out;
-  }
-}
-
-/* -------FOOTER(small)------- */
-@media screen and (max-width: 600px) {
-  footer {
-    min-height: 60vh;
-    background-color: #0066ff;
-  }
-
-  .bigscreenfooter {
-    display: none;
-  }
-
-  .link1 {
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-  }
-
-  .link1:hover {
-    color: rgb(255, 255, 255);
-  }
-
-  .firstrow {
-    padding-bottom: 20px;
-    text-align: left;
-  }
-
-  .secondrow {
-    padding-bottom: 30px;
-    text-align: left;
-  }
-  .thirdrow {
-    text-align: left;
-  }
-  .f1 {
-    color: rgb(238, 245, 255);
-    font-size: 16px;
-    font-weight: 600;
-  }
-
-  .f2 {
-    color: rgb(238, 245, 255);
-    font-size: 11px;
-    font-weight: 400;
-  }
-
-  .f3 {
-    color: rgb(238, 245, 255);
-    font-size: 12px;
-    font-weight: 400;
-    padding: 4px 0;
-  }
-
-  .f4 {
-    color: rgb(238, 245, 255);
-    font-size: 11px;
-    font-weight: 400;
-  }
-  .row1 {
-    margin-bottom: 30px;
-  }
-  .row2 {
-    margin: 14px 0 14px 0;
-  }
-}
-
-/* ------------NAVBAR(small screens)----------- */
-
-@media screen and (max-width: 600px) {
-  .nav1con {
-    display: none;
-  }
-
-  .nav2con {
-    width: 100%;
-  }
-
-  .navbaar2 {
-    min-height: 20vh;
-    padding: 12px 0;
-    background-color: #fff;
-    z-index: 2;
-  }
-
-  .sidetoside {
-    display: flex;
-  }
-
-  .f5 {
-    color: #000;
-    font-size: 8px;
-    font-weight: 400;
-  }
-
-  .logo {
-    font-size: 20px;
-    letter-spacing: -1px;
-    color: #000;
-    padding-left: 14px;
-    font-weight: 600;
-  }
-  .logo2 {
-    font-size: 12px;
-    color: #000;
-    padding-left: 14px;
-    font-weight: 500;
-  }
-
-  .tulogo {
-    padding-left: 24px;
-  }
-  br {
-    line-height: 0.2;
-  }
-
-  .hb {
-    display: flex;
-    align-items: right;
-    justify-content: right;
-  }
-
-  .hbmenu {
-    width: 20px;
-    height: 2px;
-    background-color: rgb(255, 255, 255);
-    margin: 4px 0;
-  }
-
-  .navlnk {
-    color: #000;
-    font-size: 12px;
-    font-weight: 500;
-    padding: 0 6px 0 6px;
-  }
-
-  .navlnk1 {
-    color: #0066ff;
-    font-size: 12px;
-    font-weight: 500;
-    padding: 0 6px 0 6px;
-  }
-
-  .navlnk:hover {
-    color: #000;
-    border-bottom: 3px solid #0066ff;
-    font-weight: 500;
-    transition: 0.1s ease-in-out;
-  }
-
-  .navlnk1:hover {
-    color: #0040a0;
-    border-bottom: 3px solid #0066ff;
-    transition: 0.1s ease-in-out;
-  }
-}
-
-/* ----------Job(small)---------- */
-@media screen and (max-width: 600px) {
-  .jobscon {
-    padding: 10px;
-    border-radius: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .jobscon1 {
-    width: 90%;
-  }
-
-  .link {
-    color: #000;
-    text-decoration: none;
-  }
-
-  .link:hover {
-    color: #0066ff;
-  }
-
-  .jlink {
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-  }
-
-  .jlink:hover {
-    color: #ffffff;
-  }
-  .jobbody {
-    border: solid #f5f7f8;
-    background-color: #f5f7f8;
-    border-radius: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .jobtext1 {
-    font-size: 14px;
-    font-weight: 500;
-    padding: 10px 10px 0 20px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    width: 300px;
-  }
-
-  .jobtext2 {
-    font-size: 14px;
-    font-weight: 400;
-    padding: 10px 10px 0 0;
-  }
-
-  .jobbtn {
-    position: relative;
-    right: 0;
-  }
-}
-
-/* ----------About(small)---------- */
-@media screen and (max-width: 600px) {
-  .aboutcontainer {
-    min-height: 80vh;
-  }
-
-  .abouttext {
-    padding: 10px 30px;
-    line-height: 2;
-    text-align: justify;
-    text-justify: inter-word;
-    color: #000;
-    font-weight: 500;
-    font-size: 12px;
-  }
-}
-
-/* ----------Visitor(small)---------- */
-@media screen and (max-width: 600px) {
-  .viscon {
-    padding: 16px;
-    border-radius: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .viscon1 {
-    width: 90%;
-  }
-
-  .visbody {
-    display: flex;
-    border: solid #f5f7f8;
-    background-color: #f5f7f8;
-    border-radius: 30px;
-
-    overflow: hidden;
-  }
-
-  .vistext1 {
-    font-size: 14px;
-    font-weight: 500;
-    padding: 10px 10px 0 20px;
-  }
-
-  .vistext2 {
-    font-size: 12px;
-    font-weight: 500;
-    padding: 10px 10px 0 0;
-  }
-}
-
-/* --------HOME SECTION(small)--------- */
-/* -------SECTION 1 (S1)------- */
-@media screen and (max-width: 600px) {
-  .sctn_one {
-    min-height: 50vh;
-  }
-
-  .cdiv1 {
-    text-align: center;
-  }
-  .tnp3 {
-    margin-top: 40px;
-  }
-  .tnp1 {
-    display: none;
-  }
-  .stext1 {
-    color: #141414;
-    font-size: 22px;
-    font-weight: 700;
-    letter-spacing: -1px;
-    margin-top: 10px;
-  }
-  .stext2 {
-    color: #141414;
-    font-size: 14px;
-    font-weight: 600;
-    letter-spacing: -1px;
-  }
-}
-
-/* -------SECTION 2(S2)------- */
-@media screen and (max-width: 600px) {
-  .sctn_two {
-    min-height: 60vh;
-  }
-
-  .slider {
-    padding: 0 20px;
-  }
-
-  .rec.rec-dot {
-    visibility: hidden;
-  }
-
-  .rec.rec-arrow {
-    color: #0066ff;
-    background-color: #f5f7f8;
-    border-radius: 30%;
-  }
-
-  .slide {
-    text-align: center;
-    color: #141414;
-    font-size: 20px;
-    font-weight: 500;
-    margin: 20px 0 30px 0;
-  }
-
-  .slidetext:hover {
-    border-bottom: 3px solid #0066ff;
-    transition: 0.1s ease-in-out;
-  }
-}
-
-/* -------SECTION 3(S2)------- */
-@media screen and (max-width: 600px) {
-  .act {
-    text-align: center;
-    color: #141414;
-    font-size: 20px;
-    font-weight: 500;
-    margin: 40px 0 60px 0;
-  }
-
-  .acttext:hover {
-    border-bottom: 3px solid #0066ff;
-    transition: 0.1s ease-in-out;
-  }
-}
-/* -------SECTION Odd and Even(small)------- */
-
-@media screen and (max-width: 600px) {
-  .sctn_odd {
-    min-height: 60vh;
-  }
-
-  .bigscreens1 {
-    display: none;
-  }
-
-  .bigscreens2 {
-    display: none;
-  }
-  .a1 {
-    color: #1b1b1b;
-    font-size: 18px;
-    font-weight: 900;
-    margin: 16px 0 16px 0;
-  }
-
-  .a2 {
-    color: #636363;
-    font-size: 14px;
-    font-weight: 500;
-    text-align: justify;
-    text-justify: inter-word;
-  }
-
-  .tnpcontainer {
-    padding: 0 30px;
-  }
-}
-
-/* -------SECTION 3(S2)------- */
-@media screen and (max-width: 600px) {
-  .recruitcon4 {
-    padding: 0 30px;
-  }
-  .recruitcon3 {
-    padding: 0 30px;
-  }
-
-  .recruitrow3 {
-    padding: 0 30px;
-  }
-
-  .sfourcon1 {
-    display: none;
-  }
-
-  .tnpcontainer1 {
-    padding: 0 10px;
-  }
-
-  .sctn_recruit {
-    min-height: 60vh;
-  }
-
-  .a3 {
-    color: #1b1b1b;
-    font-size: 18px;
-    font-weight: 900;
-    margin: 16px 0 16px 0;
-  }
-
-  .a4 {
-    color: #636363;
-    font-size: 14px;
-    font-weight: 500;
-    text-align: justify;
-    text-justify: inter-word;
-  }
-}
-
-/* --------PLACEMENT(small)-------- */
-@media screen and (max-width: 600px) {
-  .select {
-    background-color: #f5f7f8;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 76%;
-    padding: 20px;
-    border-radius: 20px;
-  }
-
-  .placecon {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding-bottom: 40px;
-  }
-  .pb {
-    padding-right: 50px;
-    font-size: 14px;
-    font-weight: 500;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    width: 300px;
-  }
-
-  .tablecon3 {
-    width: 80%;
-    overflow: auto;
-  }
-  .tablecon2 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .tablecon1 {
-    display: none;
   }
 }
