FEAT: created frontend for student profile page

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,14 @@
   border-radius: 50px;
 }
 
+button:focus {
+  outline: none;
+}
+
+.btn:focus {
+  outline: none;
+}
+
 /* ----------------Form------------------ */
 @media screen and (min-width: 601px) {
   .formcon {
