FEAT: Added Training tab for creating trainings and taking attendance

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 }
 
 /* -------SCROLLBAR------- */
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   width: 8px;
 }
 
@@ -18,7 +18,7 @@
 ::-webkit-scrollbar-thumb {
   background-color: #292929;
   border-radius: 50px;
-}
+} */
 
 button:focus {
   outline: none;
