--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,11 +1,19 @@
 /* -------NAVBAR(HEADER)------- */
+header{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
 @media screen and (min-width: 601px) {
   .navbaar {
     min-height: 20vh;
+    width: 85vw;
     padding: 12px 20px 12px 20px;
     background-color: #fff;
     z-index: 2;
-  }
+    }
 
   .nav2con {
     display: none;
@@ -158,4 +166,83 @@
     border-bottom: 3px solid #0066ff;
     transition: 0.1s ease-in-out;
   }
+}
+
+.top_side_registration{
+  display: flex;
+  width: fit-content;
+  justify-self: end;
+  align-items: center;
+}
+
+.rightBtn{
+  font-size: small;
+  font-weight: 500;
+  padding: 8px 10px;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.registerBtn{
+  background-color: #fff;
+  border: 1px solid #0066ff;
+  color: #000;
+  border-radius: 4px;
+}
+
+.registerBtn:hover{
+  background-color: #0066ff;
+  color: #fff ;
+  border: 1px solid #0066ff;
+  transition: 0.1s ease-in-out;
+}
+
+.loginBtn:hover{
+  font-weight: 600;
+  color: #0066ff;
+  transition: 0.1s ease-in-out;
+}
+
+.top_side_registered a , .top_side_registration a{
+  text-decoration: none;
+  color: inherit;
+}
+
+
+.top_side_registered{
+  display: flex;
+  width: fit-content;
+  justify-self: end;
+  align-items: center;
+  border: 1px solid #fff;
+  padding: 5px 5px 5px 7px;
+  cursor: pointer;
+}
+
+.top_side_registered img{
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.top_side_registered .userName{
+  margin-right: 10px;
+  color: #0066ff !important;
+}
+.logoutName{
+  border: 1px solid #0066ff;
+  padding: 5px 5px 5px 7px;
+  animation: scale 0.3s ease-in-out  1 ;
+}
+
+@keyframes scale{
+
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+
 }
