--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -166,6 +166,15 @@ header{
     border-bottom: 3px solid #0066ff;
     transition: 0.1s ease-in-out;
   }
+  
+}
+
+a{
+  text-decoration: none;
+  margin-top: 5px;
+}
+a:hover{
+  text-decoration: none;
 }
 
 .top_side_registration{
