--- a/src/sections/Users/Student/StudentProfile/StudentProfile.scss
+++ b/src/sections/Users/Student/StudentProfile/StudentProfile.scss
@@ -19,6 +19,12 @@
             border-radius: 50%;
         }
 
+            .avatar > img {
+                width: 200px;
+                height: 200px;
+                object-fit: cover;
+            }
+
         .general{
             font-family: 'Roboto', sans-serif;
             font-weight: 500;
