--- a/src/sections/Users/Student/StudentProfile/StudentProfile.scss
+++ b/src/sections/Users/Student/StudentProfile/StudentProfile.scss
@@ -17,6 +17,7 @@
             height: 200px;
             overflow: hidden;
             border-radius: 50%;
+            margin-bottom: 10px;
         }
 
             .avatar > img {
